sw: Adapt software to new systemRDL c-header `chimera_addrmap.h`

--- a/hw/rdl/chimera_regs.rdl
+++ b/hw/rdl/chimera_regs.rdl
@@ -9,7 +9,7 @@
 `define CHIMERA_RDL
 
 addrmap chimera_regs #(
-    longint unsigned NumClusters = 1 // Number of cores
+    longint unsigned NumClusters = 1 // Number of clusters
 ) {
   name = "chimera_regs";
   desc = "Chimera SoC control registers";
